<resources>
    <string name="app_name">Mushroom Hunting</string>
    <string name="mushroom_hunting_tracker">Mushroom Hunting Tracker</string>
    <string name="trip_name">Trip Name</string>
    <string name="enter_trip_name">Enter trip name</string>
    <string name="add_new_trip">➕ Add New Trip</string>
    <string name="view_trips">🗂️ View Trips</string>
    <string name="add_mushroom_details">🍄 Add Mushroom Details</string>
    <string name="settings">⚙️ Settings</string>
    <string name="trip_name_date">Trip Name - Date</string>
    <string name="recent_activity">Recent Activity:</string>
    <string name="help">❓ Help</string>
    <string name="enter_trip_description">Enter trip desciption</string>
    <string-array name="trip_array" />
</resources>